# tracer

./: .dockerignore  .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Caddyfile  Dockerfile.web  README.md  docker-bake.hcl  entrypoint.sh  justfile
docker/demo/: Dockerfile.loadgen  README.md  docker-bake.hcl  docker-compose.yaml  tempo.yaml
docker/demo/loadgen/: Cargo.toml
docker/demo/loadgen/src/: main.rs
skills/tracer-api/: SKILL.md
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/scripts/: package-linux.ts
web/server/: config.test.ts  config.ts  discovery.test.ts  discovery.ts  docs.ts  index.ts  misc.ts  openapi.ts  params.test.ts  params.ts  problem.ts  registry.ts  router.test.ts  router.ts  routes.ts  search.test.ts  search.ts  surface.ts  tags.ts  traces.test.ts  traces.ts
web/src/: App.css  App.tsx  main.tsx
web/src/api/: client.test.ts  client.ts  tempo.test.ts  tempo.ts
web/src/components/: Calendar.css  Calendar.tsx  Combobox.css  Combobox.tsx  EventDetails.css  EventDetails.tsx  EventsView.css  EventsView.tsx  ExportModal.css  ExportModal.tsx  FlameGraph.css  FlameGraph.tsx  HeatMap.css  HeatMap.tsx  RangePicker.css  RangePicker.tsx  SearchPanel.css  SearchPanel.tsx  Select.css  Select.tsx  SpanDetails.css  SpanDetails.tsx  SpanStats.css  SpanStats.tsx  TraceList.css  TraceList.tsx
web/src/lib/: apischema.ts  export.test.ts  export.ts  format.ts  model.test.ts  model.ts  range.ts  searchResults.test.ts  searchResults.ts  trace.test.ts  trace.ts  traceql.test.ts  traceql.ts  (+2 more)
(+2 files in other folders)
