[package]
name = "consensus-sim"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
futures = "0.3"
rand = "0.9"
sha2 = "0.10"

# Keep generated binaries small and fast; this is a long-running emitter.
[profile.release]
lto = "thin"
codegen-units = 1
